@@ -14,6 +14,7 @@ v8.0.31
 - BUG#34373612: Fix the assumption that gcc is the default compiler
 - BUG#34283402: Binary data starting with 0x00 are returned as empty string
 - BUG#34217492: Exec of stored procedures with args fails when db prefix used
+- BUG#33987119: TEXT and with a _bin collation (e.g: utf8mb4_bin) are considered as bytes object
 - BUG#28491115: Connector/Python crashes on 0 time value
 - BUG#28295478: Align exception types raised by pure Python and c-ext
 - BUG#27634910: Add warning count method to cursors
